Change color scheme to blue (#2563eb primary, #38bdf8 accent)

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <!-- Favicon - Inline SVG Data URL -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%236366f1'/%3E%3Cstop offset='100%25' style='stop-color:%2322d3ee'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' rx='40' fill='%230a0a0f'/%3E%3Cpath d='M45 126L90 45L135 126H45Z' fill='%236366f1'/%3E%3Ccircle cx='90' cy='100' r='18' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%232563eb'/%3E%3Cstop offset='100%25' style='stop-color:%2338bdf8'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' rx='40' fill='%230a0a0f'/%3E%3Cpath d='M45 126L90 45L135 126H45Z' fill='%232563eb'/%3E%3Ccircle cx='90' cy='100' r='18' fill='%230a0a0f'/%3E%3C/svg%3E">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,10 +43,10 @@
         }
 
         :root {
-            --primary: #6366f1;
-            --primary-light: #818cf8;
-            --accent: #22d3ee;
-            --accent-glow: rgba(34, 211, 238, 0.3);
+            --primary: #2563eb;
+            --primary-light: #3b82f6;
+            --accent: #38bdf8;
+            --accent-glow: rgba(56, 189, 248, 0.3);
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
             --bg-glass: rgba(255, 255, 255, 0.03);
@@ -4326,8 +4326,8 @@
             const colors = new Float32Array(particleCount * 3);
             const originalPositions = new Float32Array(particleCount * 3);
 
-            const color1 = new THREE.Color(0x6366f1);
-            const color2 = new THREE.Color(0x22d3ee);
+            const color1 = new THREE.Color(0x2563eb);
+            const color2 = new THREE.Color(0x38bdf8);
 
             for (let i = 0; i < particleCount; i++) {
                 const x = (Math.random() - 0.5) * 20;
@@ -4381,7 +4381,7 @@
             lineGeometry.setAttribute('position', new THREE.Float32BufferAttribute(linePositions, 3));
 
             const lineMaterial = new THREE.LineBasicMaterial({
-                color: 0x6366f1,
+                color: 0x2563eb,
                 transparent: true,
                 opacity: 0.2
             });
@@ -4400,7 +4400,7 @@
             for (let i = 0; i < 8; i++) {
                 const geometry = shapeGeometries[i % shapeGeometries.length];
                 const material = new THREE.MeshBasicMaterial({
-                    color: i % 2 === 0 ? 0x6366f1 : 0x22d3ee,
+                    color: i % 2 === 0 ? 0x2563eb : 0x38bdf8,
                     wireframe: true,
                     transparent: true,
                     opacity: 0.3
