Remove all purple/pink - convert to blue scheme throughout

--- a/index.html
+++ b/index.html
@@ -2742,7 +2742,7 @@
 
         .carousel-card .card-badge.productivity {
             background: rgba(236, 72, 153, 0.2);
-            color: #ec4899;
+            color: #0ea5e9;
             border: 1px solid rgba(236, 72, 153, 0.3);
         }
 
@@ -5556,7 +5556,7 @@
         ctx.fillText('> AI-powered solutions', 20, 200);
         ctx.fillStyle = '#60a5fa';
         ctx.fillText('> Cloud & security', 20, 225);
-        ctx.fillStyle = '#a78bfa';
+        ctx.fillStyle = '#60a5fa';
         ctx.fillText('> Local Cranston support', 20, 250);
 
         // Blinking cursor at bottom
@@ -5754,7 +5754,7 @@
 
         // "SEMINARS" in pink/magenta neon
         neonCtx.shadowBlur = glowIntensity;
-        neonCtx.shadowColor = '#ec4899';
+        neonCtx.shadowColor = '#0ea5e9';
         neonCtx.font = 'bold 36px Arial';
         neonCtx.fillStyle = `rgba(236, 72, 153, ${flicker})`;
         neonCtx.fillText('SEMINARS', 200, 140);
@@ -5948,7 +5948,7 @@
 
         // "PRO ADS" in magenta neon
         poster3Ctx.shadowBlur = 35 * flicker;
-        poster3Ctx.shadowColor = '#d946ef';
+        poster3Ctx.shadowColor = '#0ea5e9';
         poster3Ctx.font = 'bold 42px Arial';
         poster3Ctx.fillStyle = `rgba(217, 70, 239, ${flicker})`;
         poster3Ctx.textAlign = 'center';
@@ -5994,7 +5994,7 @@
 
     // Magenta frame
     const frame3Material = new THREE.MeshStandardMaterial({
-        color: 0xd946ef, emissive: 0xd946ef, emissiveIntensity: 0.6, roughness: 0.3, metalness: 0.5
+        color: 0x0ea5e9, emissive: 0x0ea5e9, emissiveIntensity: 0.6, roughness: 0.3, metalness: 0.5
     });
     poster3Group.add(new THREE.Mesh(new THREE.BoxGeometry(1.5, 0.03, 0.03), frame3Material).translateY(0.47));
     poster3Group.add(new THREE.Mesh(new THREE.BoxGeometry(1.5, 0.03, 0.03), frame3Material).translateY(-0.47));
@@ -6005,7 +6005,7 @@
     poster3Group.position.set(-1.5, 2.5, -4.95);
     scene.add(poster3Group);
 
-    const poster3Light = new THREE.PointLight(0xd946ef, 1.2, 2.5);
+    const poster3Light = new THREE.PointLight(0x0ea5e9, 1.2, 2.5);
     poster3Light.position.set(-1.5, 2.5, -4.5);
     scene.add(poster3Light);
 
@@ -6186,10 +6186,10 @@
         // Node definitions
         const nodes = [
             { x: 50, y: 120, label: 'RSS Feed', icon: '📡', color: '#ff6b35' },
-            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#8b5cf6' },
+            { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#3b82f6' },
             { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#3b82f6' },
             { x: 410, y: 120, label: 'Filter', icon: '⚡', color: '#10b981' },
-            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#8b5cf6' },
+            { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#3b82f6' },
             { x: 530, y: 170, label: 'Review', icon: '📊', color: '#22c55e' },
             { x: 630, y: 70, label: 'Post', icon: '📤', color: '#1d9bf0' },
         ];
@@ -6883,7 +6883,7 @@
 
         // Box 2: AI Processing
         if (animProgress > 0.25) {
-            wbCtx.strokeStyle = '#8b5cf6';
+            wbCtx.strokeStyle = '#3b82f6';
             wbCtx.lineWidth = 2;
             wbCtx.strokeRect(200, 80, 120, 50);
             wbCtx.font = '12px Arial';
@@ -6894,7 +6894,7 @@
             wbCtx.save();
             wbCtx.translate(300, 105);
             wbCtx.rotate(time / 500);
-            wbCtx.strokeStyle = '#8b5cf6';
+            wbCtx.strokeStyle = '#3b82f6';
             wbCtx.beginPath();
             wbCtx.arc(0, 0, 8, 0, Math.PI * 2);
             wbCtx.stroke();
@@ -7333,7 +7333,7 @@
     scene.add(cable2);
 
     // Robot 3: Purple robot carrying data (walking)
-    const robot3 = createRobot(0x8b5cf6, 0xec4899);
+    const robot3 = createRobot(0x3b82f6, 0x0ea5e9);
     robot3.position.set(1.5, 0.05, 2.5);
     robot3.rotation.y = Math.PI * 0.2;
     robot3.scale.setScalar(0.8);
@@ -7343,7 +7343,7 @@
     // Data tablet the robot is carrying
     const tablet = new THREE.Mesh(
         new THREE.BoxGeometry(0.15, 0.22, 0.01),
-        new THREE.MeshStandardMaterial({ color: 0x8b5cf6, emissive: 0x8b5cf6, emissiveIntensity: 0.4 })
+        new THREE.MeshStandardMaterial({ color: 0x3b82f6, emissive: 0x3b82f6, emissiveIntensity: 0.4 })
     );
     tablet.position.set(1.5, 0.35, 2.35);
     tablet.rotation.y = Math.PI * 0.2;
@@ -7359,7 +7359,7 @@
     robotLight2.position.set(3, 0.5, -2);
     scene.add(robotLight2);
 
-    const robotLight3 = new THREE.PointLight(0xec4899, 0.4, 2);
+    const robotLight3 = new THREE.PointLight(0x0ea5e9, 0.4, 2);
     robotLight3.position.set(1.5, 0.5, 2.5);
     scene.add(robotLight3);
 
