--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <!-- Favicon - Inline SVG Data URL -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%232563eb'/%3E%3Cstop offset='100%25' style='stop-color:%2338bdf8'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
-    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' rx='40' fill='%230a0a0f'/%3E%3Cpath d='M45 126L90 45L135 126H45Z' fill='%232563eb'/%3E%3Ccircle cx='90' cy='100' r='18' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230051E6'/%3E%3Cstop offset='100%25' style='stop-color:%2300E1E6'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='32' height='32' rx='8' fill='%230a0a0f'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='url(%23g)' opacity='0.9'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230a0a0f'/%3E%3C/svg%3E">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'%3E%3Crect width='180' height='180' rx='40' fill='%230a0a0f'/%3E%3Cpath d='M45 126L90 45L135 126H45Z' fill='%230051E6'/%3E%3Ccircle cx='90' cy='100' r='18' fill='%230a0a0f'/%3E%3C/svg%3E">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -43,19 +43,22 @@
         }
 
         :root {
-            --primary: #2563eb;
-            --primary-light: #3b82f6;
-            --accent: #38bdf8;
-            --accent-glow: rgba(56, 189, 248, 0.3);
+            --primary: #0051E6;
+            --primary-light: #4C82E6;
+            --primary-deep: #0008E6;
+            --accent: #00E1E6;
+            --accent-sky: #019BE6;
+            --accent-violet: #4300E6;
+            --accent-glow: rgba(0, 225, 230, 0.3);
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
             --bg-glass: rgba(255, 255, 255, 0.03);
             --text: #f8fafc;
-            --text-muted: #a1afc4; /* Improved contrast: 5.2:1 against bg-dark */
+            --text-muted: #a1afc4;
             --border: rgba(255, 255, 255, 0.08);
             --success: #10b981;
             --warning: #f59e0b;
-            --focus-ring: rgba(99, 102, 241, 0.5);
+            --focus-ring: rgba(0, 81, 230, 0.5);
         }
 
         html {
@@ -63,7 +66,7 @@
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             background: var(--bg-dark);
             color: var(--text);
             overflow-x: hidden;
@@ -71,6 +74,10 @@
             font-size: 16px;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+        }
+
+        h1, h2, h3, h4, h5, h6, .heading-font {
+            font-family: 'Space Grotesk', -apple-system, sans-serif;
         }
 
         /* Loading screen removed */
@@ -4326,8 +4333,8 @@
             const colors = new Float32Array(particleCount * 3);
             const originalPositions = new Float32Array(particleCount * 3);
 
-            const color1 = new THREE.Color(0x2563eb);
-            const color2 = new THREE.Color(0x38bdf8);
+            const color1 = new THREE.Color(0x0051E6);
+            const color2 = new THREE.Color(0x00E1E6);
 
             for (let i = 0; i < particleCount; i++) {
                 const x = (Math.random() - 0.5) * 20;
@@ -4381,7 +4388,7 @@
             lineGeometry.setAttribute('position', new THREE.Float32BufferAttribute(linePositions, 3));
 
             const lineMaterial = new THREE.LineBasicMaterial({
-                color: 0x2563eb,
+                color: 0x0051E6,
                 transparent: true,
                 opacity: 0.2
             });
@@ -4400,7 +4407,7 @@
             for (let i = 0; i < 8; i++) {
                 const geometry = shapeGeometries[i % shapeGeometries.length];
                 const material = new THREE.MeshBasicMaterial({
-                    color: i % 2 === 0 ? 0x2563eb : 0x38bdf8,
+                    color: i % 2 === 0 ? 0x0051E6 : 0x00E1E6,
                     wireframe: true,
                     transparent: true,
                     opacity: 0.3
@@ -5260,10 +5267,10 @@
 
     // AIBridges Brand Colors
     const COLORS = {
-        primary: 0x2563eb,      // Blue
+        primary: 0x0051E6,      // Blue
         secondary: 0x06b6d4,    // Cyan
-        accent: 0x0ea5e9,       // Sky blue
-        glow: 0x38bdf8,         // Light cyan glow
+        accent: 0x00E1E6,       // Sky blue
+        glow: 0x00E1E6,         // Light cyan glow
         dark: 0x0f172a,         // Dark slate
         light: 0xf0f9ff         // Light blue tint
     };
@@ -5994,7 +6001,7 @@
 
     // Magenta frame
     const frame3Material = new THREE.MeshStandardMaterial({
-        color: 0x0ea5e9, emissive: 0x0ea5e9, emissiveIntensity: 0.6, roughness: 0.3, metalness: 0.5
+        color: 0x00E1E6, emissive: 0x00E1E6, emissiveIntensity: 0.6, roughness: 0.3, metalness: 0.5
     });
     poster3Group.add(new THREE.Mesh(new THREE.BoxGeometry(1.5, 0.03, 0.03), frame3Material).translateY(0.47));
     poster3Group.add(new THREE.Mesh(new THREE.BoxGeometry(1.5, 0.03, 0.03), frame3Material).translateY(-0.47));
@@ -6005,7 +6012,7 @@
     poster3Group.position.set(-1.5, 2.5, -4.95);
     scene.add(poster3Group);
 
-    const poster3Light = new THREE.PointLight(0x0ea5e9, 1.2, 2.5);
+    const poster3Light = new THREE.PointLight(0x00E1E6, 1.2, 2.5);
     poster3Light.position.set(-1.5, 2.5, -4.5);
     scene.add(poster3Light);
 
@@ -6603,7 +6610,7 @@
     // Tank glass
     const tankGeometry = new THREE.BoxGeometry(0.6, 0.4, 0.3);
     const tankMaterial = new THREE.MeshStandardMaterial({
-        color: 0x0ea5e9,
+        color: 0x00E1E6,
         transparent: true,
         opacity: 0.2,
         metalness: 0.1,
@@ -6666,7 +6673,7 @@
     fishTankGroup.add(tankStand);
 
     // Tank light
-    const tankLight = new THREE.PointLight(0x0ea5e9, 0.8, 2);
+    const tankLight = new THREE.PointLight(0x00E1E6, 0.8, 2);
     tankLight.position.set(0, 0.5, 0);
     fishTankGroup.add(tankLight);
 
@@ -6999,7 +7006,7 @@
     whiteboardGroup.add(markerTray);
 
     // Markers
-    const markerColors = [0x2563eb, 0xef4444, 0x22c55e, 0x1e293b];
+    const markerColors = [0x0051E6, 0xef4444, 0x22c55e, 0x1e293b];
     markerColors.forEach((color, i) => {
         const marker = new THREE.Mesh(
             new THREE.CylinderGeometry(0.015, 0.015, 0.12, 8),
@@ -7172,7 +7179,7 @@
     }
 
     // Robot 1: Blue robot at secondary desk (working on laptop)
-    const robot1 = createRobot(0x2563eb, 0x06b6d4);
+    const robot1 = createRobot(0x0051E6, 0x06b6d4);
     robot1.position.set(-2.5, 0.05, 1.5);
     robot1.rotation.y = Math.PI * 0.8;
     robot1.scale.setScalar(0.9);
@@ -7312,8 +7319,8 @@
 
     // Cable runs on floor
     const cableMaterial = new THREE.MeshStandardMaterial({
-        color: 0x0ea5e9,
-        emissive: 0x0ea5e9,
+        color: 0x00E1E6,
+        emissive: 0x00E1E6,
         emissiveIntensity: 0.3,
         roughness: 0.6
     });
@@ -7333,7 +7340,7 @@
     scene.add(cable2);
 
     // Robot 3: Purple robot carrying data (walking)
-    const robot3 = createRobot(0x3b82f6, 0x0ea5e9);
+    const robot3 = createRobot(0x4C82E6, 0x00E1E6);
     robot3.position.set(1.5, 0.05, 2.5);
     robot3.rotation.y = Math.PI * 0.2;
     robot3.scale.setScalar(0.8);
@@ -7343,7 +7350,7 @@
     // Data tablet the robot is carrying
     const tablet = new THREE.Mesh(
         new THREE.BoxGeometry(0.15, 0.22, 0.01),
-        new THREE.MeshStandardMaterial({ color: 0x3b82f6, emissive: 0x3b82f6, emissiveIntensity: 0.4 })
+        new THREE.MeshStandardMaterial({ color: 0x4C82E6, emissive: 0x4C82E6, emissiveIntensity: 0.4 })
     );
     tablet.position.set(1.5, 0.35, 2.35);
     tablet.rotation.y = Math.PI * 0.2;
@@ -7359,7 +7366,7 @@
     robotLight2.position.set(3, 0.5, -2);
     scene.add(robotLight2);
 
-    const robotLight3 = new THREE.PointLight(0x0ea5e9, 0.4, 2);
+    const robotLight3 = new THREE.PointLight(0x00E1E6, 0.4, 2);
     robotLight3.position.set(1.5, 0.5, 2.5);
     scene.add(robotLight3);
 
