--- a/casevault-calculator.html
+++ b/casevault-calculator.html
@@ -118,10 +118,10 @@
         }
         .form-group input:focus, .form-group select:focus {
             outline: none;
-            border-color: #2563eb;
+            border-color: #0051E6;
         }
         .btn-primary {
-            background: linear-gradient(135deg, #2563eb 0%, #06b6d4 100%);
+            background: linear-gradient(135deg, #0051E6 0%, #06b6d4 100%);
             color: white;
             padding: 16px 32px;
             border: none;
@@ -146,7 +146,7 @@
             margin-top: 30px;
             padding: 30px;
             background: #f0f9ff;
-            border-left: 4px solid #2563eb;
+            border-left: 4px solid #0051E6;
             border-radius: 8px;
         }
         .result-box.show {
@@ -155,7 +155,7 @@
         .result-value {
             font-size: 32px;
             font-weight: 700;
-            color: #2563eb;
+            color: #0051E6;
             margin: 10px 0;
         }
         .confidence-badge {
@@ -185,7 +185,7 @@
         .stat-value {
             font-size: 2rem;
             font-weight: 700;
-            color: #2563eb;
+            color: #0051E6;
         }
         .stat-label {
             color: #64748b;
@@ -225,7 +225,7 @@
         }
         .range-item-value.highlight {
             font-size: 2rem;
-            color: #2563eb;
+            color: #0051E6;
         }
     </style>
 </head>
@@ -380,7 +380,7 @@
     <!-- Footer -->
     <footer style="text-align: center; padding: 40px 20px; color: #64748b; font-size: 14px;">
         <p>Estimates based on real settlement data. Not legal advice.</p>
-        <p>© 2026 <a href="/" style="color: #2563eb;">AIBridges</a> | Cranston, RI</p>
+        <p>© 2026 <a href="/" style="color: #0051E6;">AIBridges</a> | Cranston, RI</p>
     </footer>
 
     <script>
