--- a/guide-clawdbot.html
+++ b/guide-clawdbot.html
@@ -11,7 +11,7 @@
     <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -19,7 +19,7 @@
     <style>
         /* Guide-specific styles */
         .guide-hero {
-            background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%);
+            background: linear-gradient(135deg, #0051E6 0%, #ec4899 100%);
             padding: 6rem 0 4rem;
             position: relative;
             overflow: hidden;
@@ -86,7 +86,7 @@
         .section-icon {
             width: 50px;
             height: 50px;
-            background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%);
+            background: linear-gradient(135deg, #0051E6 0%, #ec4899 100%);
             border-radius: 12px;
             display: flex;
             align-items: center;
@@ -124,7 +124,7 @@
         .step-number {
             width: 36px;
             height: 36px;
-            background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%);
+            background: linear-gradient(135deg, #0051E6 0%, #ec4899 100%);
             color: white;
             border-radius: 10px;
             display: flex;
@@ -156,7 +156,7 @@
         }
 
         .tag-mac {
-            background: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%);
+            background: linear-gradient(135deg, #4C82E6 0%, #1d4ed8 100%);
             color: white;
         }
 
@@ -181,7 +181,7 @@
             padding: 5px 10px;
             border-radius: 6px;
             font-size: 11px;
-            font-family: 'Inter', sans-serif;
+            font-family: 'DM Sans', sans-serif;
             font-weight: 500;
             cursor: pointer;
             transition: all 0.2s;
@@ -290,11 +290,11 @@
 
         .alert-info {
             background: linear-gradient(135deg, #dbeafe 0%, #bfdbfe 100%);
-            border: 1px solid #3b82f6;
+            border: 1px solid #4C82E6;
         }
 
         .alert-info .alert-icon {
-            background: #3b82f6;
+            background: #4C82E6;
             color: white;
         }
 
@@ -335,7 +335,7 @@
         .paywall-card .price {
             font-size: 3rem;
             font-weight: 800;
-            background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%);
+            background: linear-gradient(135deg, #0051E6 0%, #ec4899 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -374,7 +374,7 @@
             align-items: center;
             justify-content: center;
             gap: 10px;
-            background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%);
+            background: linear-gradient(135deg, #0051E6 0%, #ec4899 100%);
             color: white;
             padding: 15px 40px;
             border-radius: 12px;
@@ -511,7 +511,7 @@
     <main class="guide-content">
 
         <!-- What You'll Build -->
-        <div class="guide-card" style="background: linear-gradient(135deg, #6366f1 0%, #ec4899 100%); color: white;">
+        <div class="guide-card" style="background: linear-gradient(135deg, #0051E6 0%, #ec4899 100%); color: white;">
             <h3 style="color: white; margin-bottom: 15px;">What You'll Build</h3>
             <ul style="list-style: none; padding: 0; margin: 0;">
                 <li style="padding: 8px 0; display: flex; align-items: center; gap: 10px;">
