--- a/index-new.html
+++ b/index-new.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#0f172a">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='8' fill='%230f172a'/%3E%3Cpath d='M8 22L16 8L24 22H8Z' fill='%23818cf8'/%3E%3Ccircle cx='16' cy='18' r='3' fill='%230f172a'/%3E%3C/svg%3E">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -21,15 +21,15 @@
             --border: #334155;
             --text: #f8fafc;
             --muted: #94a3b8;
-            --primary: #818cf8;
-            --primary-dark: #6366f1;
-            --accent: #22d3ee;
+            --primary: #4C82E6;
+            --primary-dark: #0051E6;
+            --accent: #00E1E6;
             --success: #34d399;
         }
         
         html { scroll-behavior: smooth; }
         body { 
-            font-family: 'Inter', -apple-system, sans-serif; 
+            font-family: 'DM Sans', -apple-system, sans-serif; 
             background: var(--bg); 
             color: var(--text); 
             line-height: 1.6;
