--- a/knowledge-graphs.html
+++ b/knowledge-graphs.html
@@ -17,16 +17,16 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #6366f1;
-            --primary-light: #818cf8;
-            --accent: #22d3ee;
+            --primary: #0051E6;
+            --primary-light: #4C82E6;
+            --accent: #00E1E6;
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
             --text: #f8fafc;
@@ -36,7 +36,7 @@
             --warning: #f59e0b;
         }
         html { scroll-behavior: smooth; }
-        body { font-family: 'Inter', sans-serif; background: var(--bg-dark); color: var(--text); line-height: 1.8; }
+        body { font-family: 'DM Sans', sans-serif; background: var(--bg-dark); color: var(--text); line-height: 1.8; }
         
         /* Navigation */
         .nav { position: fixed; top: 0; width: 100%; padding: 1rem 2rem; background: rgba(10, 10, 15, 0.9); backdrop-filter: blur(20px); z-index: 1000; border-bottom: 1px solid var(--border); }
@@ -273,8 +273,8 @@
             </div>
             <svg id="graph-svg"></svg>
             <div class="graph-legend">
-                <div class="legend-item"><div class="legend-dot" style="background: #6366f1;"></div> Company</div>
-                <div class="legend-item"><div class="legend-dot" style="background: #22d3ee;"></div> Person</div>
+                <div class="legend-item"><div class="legend-dot" style="background: #0051E6;"></div> Company</div>
+                <div class="legend-item"><div class="legend-dot" style="background: #00E1E6;"></div> Person</div>
                 <div class="legend-item"><div class="legend-dot" style="background: #10b981;"></div> Product</div>
                 <div class="legend-item"><div class="legend-dot" style="background: #f59e0b;"></div> Location</div>
             </div>
@@ -474,8 +474,8 @@
         ];
 
         const typeColors = {
-            company: "#6366f1",
-            person: "#22d3ee",
+            company: "#0051E6",
+            person: "#00E1E6",
             product: "#10b981",
             location: "#f59e0b"
         };
@@ -513,7 +513,7 @@
             .attr("stroke-width", 2)
             .attr("marker-end", "url(#arrowhead)")
             .on("mouseover", function(event, d) {
-                d3.select(this).attr("stroke", "#22d3ee").attr("stroke-width", 3);
+                d3.select(this).attr("stroke", "#00E1E6").attr("stroke-width", 3);
                 tooltip.transition().duration(200).style("opacity", 1);
                 tooltip.html(`<strong>${d.source.id || d.source}</strong> → ${d.relation} → <strong>${d.target.id || d.target}</strong>`)
                     .style("left", (event.pageX + 10) + "px")
