--- a/ouroboros/live-updates.html
+++ b/ouroboros/live-updates.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Implementation Log | Ouroboros Colony | AIBridges</title>
     <meta name="description" content="Real-time log of colony self-modifications. See what changes the AI made, why, how, and cryptographic proof of autonomous implementation.">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
         :root {
@@ -21,7 +21,7 @@
             --purple: #a55eea;
         }
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
             background: linear-gradient(135deg, #0f0c29 0%, #1a1a2e 50%, #16213e 100%);
             min-height: 100vh;
             color: var(--text);
