--- a/restaurant-scheduler.html
+++ b/restaurant-scheduler.html
@@ -13,7 +13,7 @@
             --text-secondary: #4b5563;
             --text-muted: #6b7280;
             --border-color: #e5e7eb;
-            --accent: #2563eb;
+            --accent: #0051E6;
             --accent-hover: #1d4ed8;
             --accent-light: #dbeafe;
             --success: #059669;
@@ -26,7 +26,7 @@
             --info-light: #e0f2fe;
             
             /* Professional muted role colors - using subtle indicators */
-            --role-server: #6366f1;
+            --role-server: #0051E6;
             --role-cook: #8b5cf6;
             --role-host: #06b6d4;
             --role-bartender: #f59e0b;
@@ -62,7 +62,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'DM Sans', 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             background: var(--bg-primary);
             color: var(--text-primary);
             min-height: 100vh;
@@ -1775,7 +1775,7 @@
         .login-logo .icon {
             width: 64px;
             height: 64px;
-            background: linear-gradient(135deg, #2563eb, #1d4ed8);
+            background: linear-gradient(135deg, #0051E6, #1d4ed8);
             border-radius: 16px;
             display: flex;
             align-items: center;
@@ -1814,13 +1814,13 @@
 
         .login-form input:focus {
             outline: none;
-            border-color: #2563eb;
+            border-color: #0051E6;
             box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
         }
 
         .login-form .btn-login {
             padding: 14px;
-            background: linear-gradient(135deg, #2563eb, #1d4ed8);
+            background: linear-gradient(135deg, #0051E6, #1d4ed8);
             color: white;
             border: none;
             border-radius: 8px;
@@ -1855,7 +1855,7 @@
         }
 
         .login-toggle a {
-            color: #2563eb;
+            color: #0051E6;
             cursor: pointer;
             text-decoration: none;
         }
@@ -1881,11 +1881,11 @@
         }
 
         .role-option:hover {
-            border-color: #2563eb;
+            border-color: #0051E6;
         }
 
         .role-option.selected {
-            border-color: #2563eb;
+            border-color: #0051E6;
             background: #eff6ff;
         }
 
