--- a/swiftshot-privacy.html
+++ b/swiftshot-privacy.html
@@ -10,7 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
     <style>
@@ -21,9 +21,9 @@
             --border: #3f3f46;
             --text: #fafafa;
             --text-muted: #a1a1aa;
-            --primary: #6366f1;
+            --primary: #0051E6;
             --primary-hover: #4f46e5;
-            --accent: #22d3ee;
+            --accent: #00E1E6;
             --success: #10b981;
             --warning: #f59e0b;
         }
@@ -31,7 +31,7 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
-            font-family: 'Inter', -apple-system, sans-serif;
+            font-family: 'DM Sans', -apple-system, sans-serif;
             background: var(--bg);
             color: var(--text);
             line-height: 1.6;
@@ -433,7 +433,7 @@
             </div>
 
             <div class="permission-item">
-                <div class="permission-name">offscreen <span style="color: var(--text-muted); font-family: Inter, sans-serif; font-weight: 400;">(if applicable)</span></div>
+                <div class="permission-name">offscreen <span style="color: var(--text-muted); font-family: DM Sans, sans-serif; font-weight: 400;">(if applicable)</span></div>
                 <div class="permission-reason">Used to process full-page scroll captures and image compositing in a background context without interfering with the visible page.</div>
             </div>
 
