--- a/youtube-trends.html
+++ b/youtube-trends.html
@@ -13,7 +13,7 @@
             --muted: #888;
             --accent: #ff0000;
             --green: #22c55e;
-            --blue: #3b82f6;
+            --blue: #4C82E6;
         }
         
         * { box-sizing: border-box; margin: 0; padding: 0; }
