--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <style>
@@ -32,9 +32,9 @@
         }
 
         :root {
-            --primary: #6366f1;
-            --primary-light: #818cf8;
-            --accent: #22d3ee;
+            --primary: #0051E6;
+            --primary-light: #4C82E6;
+            --accent: #00E1E6;
             --accent-glow: rgba(34, 211, 238, 0.3);
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
@@ -51,7 +51,7 @@
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
             background: var(--bg-dark);
             color: var(--text);
             line-height: 1.6;
@@ -259,16 +259,16 @@
             background: linear-gradient(135deg, #f59e0b, #ef4444);
         }
         .blog-card:nth-child(3) .blog-card-image::before {
-            background: linear-gradient(135deg, #6366f1, #22d3ee);
+            background: linear-gradient(135deg, #0051E6, #00E1E6);
         }
         .blog-card:nth-child(4) .blog-card-image::before {
-            background: linear-gradient(135deg, #10b981, #6366f1);
+            background: linear-gradient(135deg, #10b981, #0051E6);
         }
         .blog-card:nth-child(5) .blog-card-image::before {
             background: linear-gradient(135deg, #f59e0b, #ef4444);
         }
         .blog-card:nth-child(6) .blog-card-image::before {
-            background: linear-gradient(135deg, #3b82f6, #8b5cf6);
+            background: linear-gradient(135deg, #4C82E6, #8b5cf6);
         }
 
         .blog-card-content {
