--- a/colony-research.html
+++ b/colony-research.html
@@ -96,7 +96,7 @@
         .bt-header { display: flex; justify-content: space-between; align-items: flex-start; gap: 0.5rem; margin-bottom: 0.5rem; }
         .bt-title { font-weight: 600; color: #f1f5f9; text-decoration: none; flex: 1; }
         .bt-title:hover { color: #a78bfa; text-decoration: underline; }
-        .bt-insight { color: #22d3ee; font-size: 0.9rem; margin-bottom: 0.5rem; background: rgba(34, 211, 238, 0.1); padding: 0.5rem; border-radius: 4px; }
+        .bt-insight { color: #00E1E6; font-size: 0.9rem; margin-bottom: 0.5rem; background: rgba(34, 211, 238, 0.1); padding: 0.5rem; border-radius: 4px; }
         .bt-metrics { display: flex; gap: 1rem; font-size: 0.8rem; color: #64748b; }
         .bt-connections { margin-top: 0.5rem; padding-top: 0.5rem; border-top: 1px solid rgba(255,255,255,0.1); }
         .bt-connection { font-size: 0.85rem; color: #94a3b8; padding: 0.25rem 0; }
@@ -139,7 +139,7 @@
         /* Topic filter buttons */
         .topic-btn { background: rgba(99,102,241,0.15); border: 1px solid rgba(99,102,241,0.3); color: #a5b4fc; padding: 0.4rem 0.8rem; border-radius: 20px; cursor: pointer; font-size: 0.8rem; transition: all 0.2s; }
         .topic-btn:hover { background: rgba(99,102,241,0.3); }
-        .topic-btn.active { background: #6366f1; color: white; border-color: #6366f1; }
+        .topic-btn.active { background: #0051E6; color: white; border-color: #0051E6; }
         .deep-insight-card.hidden { display: none; }
         /* Paper cards - expandable */
         .paper-card { cursor: pointer; transition: all 0.2s; border-left: 3px solid #10b981; }
