--- a/index-backup.html
+++ b/index-backup.html
@@ -31,7 +31,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -41,9 +41,9 @@
         }
 
         :root {
-            --primary: #6366f1;
-            --primary-light: #818cf8;
-            --accent: #22d3ee;
+            --primary: #0051E6;
+            --primary-light: #4C82E6;
+            --accent: #00E1E6;
             --accent-glow: rgba(34, 211, 238, 0.3);
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
@@ -61,7 +61,7 @@
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
             background: var(--bg-dark);
             color: var(--text);
             overflow-x: hidden;
@@ -2684,7 +2684,7 @@
             bottom: 30px;
             right: 30px;
             z-index: 9999;
-            font-family: 'Inter', sans-serif;
+            font-family: 'DM Sans', sans-serif;
         }
 
         .chatbot-toggle {
@@ -5103,7 +5103,7 @@
 
         // Main message with typing effect
         ctx.font = 'bold 32px monospace';
-        ctx.fillStyle = '#38bdf8';
+        ctx.fillStyle = '#00E1E6';
         const text = 'Interested in AI?';
         const charCount = Math.floor((time || 0) / 100) % (text.length + 10);
         const displayText = text.substring(0, Math.min(charCount, text.length));
@@ -5119,7 +5119,7 @@
         ctx.font = '14px monospace';
         ctx.fillStyle = '#4ade80';
         ctx.fillText('> AI-powered solutions', 20, 200);
-        ctx.fillStyle = '#60a5fa';
+        ctx.fillStyle = '#019BE6';
         ctx.fillText('> Cloud & security', 20, 225);
         ctx.fillStyle = '#a78bfa';
         ctx.fillText('> Local Cranston support', 20, 250);
@@ -5752,7 +5752,7 @@
         const nodes = [
             { x: 50, y: 120, label: 'RSS Feed', icon: '📡', color: '#ff6b35' },
             { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#8b5cf6' },
-            { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#3b82f6' },
+            { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#4C82E6' },
             { x: 410, y: 120, label: 'Filter', icon: '⚡', color: '#10b981' },
             { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#8b5cf6' },
             { x: 530, y: 170, label: 'Review', icon: '📊', color: '#22c55e' },
@@ -5863,7 +5863,7 @@
         const stats = [
             { label: 'Executions', value: '1,247', color: '#10b981' },
             { label: 'Success Rate', value: '98.2%', color: '#10b981' },
-            { label: 'Posts Created', value: '892', color: '#3b82f6' },
+            { label: 'Posts Created', value: '892', color: '#4C82E6' },
             { label: 'For Review', value: '34', color: '#f59e0b' }
         ];
 
@@ -6420,7 +6420,7 @@
         const animProgress = (time % 8000) / 8000;
 
         // Box 1: Data Input
-        wbCtx.strokeStyle = '#2563eb';
+        wbCtx.strokeStyle = '#0051E6';
         wbCtx.lineWidth = 2;
         wbCtx.strokeRect(40, 80, 100, 50);
         wbCtx.font = '12px Arial';
@@ -6502,7 +6502,7 @@
         wbCtx.fillText('Efficiency Gains', 50, 180);
 
         const bars = [
-            { label: 'Speed', value: 85, color: '#2563eb' },
+            { label: 'Speed', value: 85, color: '#0051E6' },
             { label: 'Accuracy', value: 92, color: '#06b6d4' },
             { label: 'Cost', value: 70, color: '#22c55e' }
         ];
