--- a/old_index.html
+++ b/old_index.html
@@ -22,7 +22,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet">
 
     <!-- Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
@@ -1250,7 +1250,7 @@
 
         // Main message with typing effect
         ctx.font = 'bold 32px monospace';
-        ctx.fillStyle = '#38bdf8';
+        ctx.fillStyle = '#00E1E6';
         const text = 'Interested in AI?';
         const charCount = Math.floor((time || 0) / 100) % (text.length + 10);
         const displayText = text.substring(0, Math.min(charCount, text.length));
@@ -1266,7 +1266,7 @@
         ctx.font = '14px monospace';
         ctx.fillStyle = '#4ade80';
         ctx.fillText('> AI-powered solutions', 20, 200);
-        ctx.fillStyle = '#60a5fa';
+        ctx.fillStyle = '#019BE6';
         ctx.fillText('> Cloud & security', 20, 225);
         ctx.fillStyle = '#a78bfa';
         ctx.fillText('> Local Cranston support', 20, 250);
@@ -1899,7 +1899,7 @@
         const nodes = [
             { x: 50, y: 120, label: 'RSS Feed', icon: '📡', color: '#ff6b35' },
             { x: 170, y: 120, label: 'Scoring AI', icon: '🤖', color: '#8b5cf6' },
-            { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#3b82f6' },
+            { x: 290, y: 120, label: 'Code', icon: '{ }', color: '#4C82E6' },
             { x: 410, y: 120, label: 'Filter', icon: '⚡', color: '#10b981' },
             { x: 530, y: 70, label: 'Content AI', icon: '🤖', color: '#8b5cf6' },
             { x: 530, y: 170, label: 'Review', icon: '📊', color: '#22c55e' },
@@ -2010,7 +2010,7 @@
         const stats = [
             { label: 'Executions', value: '1,247', color: '#10b981' },
             { label: 'Success Rate', value: '98.2%', color: '#10b981' },
-            { label: 'Posts Created', value: '892', color: '#3b82f6' },
+            { label: 'Posts Created', value: '892', color: '#4C82E6' },
             { label: 'For Review', value: '34', color: '#f59e0b' }
         ];
 
@@ -2358,7 +2358,7 @@
         border: 1px solid rgba(37, 99, 235, 0.2);
     }
     .office3d-hint i {
-        color: #38bdf8;
+        color: #00E1E6;
         margin-right: 4px;
     }
     @keyframes fadeInUp {
