--- a/restaurant-scheduler-fixed.html
+++ b/restaurant-scheduler-fixed.html
@@ -13,7 +13,7 @@
             --text-secondary: #4b5563;
             --text-muted: #6b7280;
             --border-color: #e5e7eb;
-            --accent: #2563eb;
+            --accent: #0051E6;
             --accent-hover: #1d4ed8;
             --accent-light: #dbeafe;
             --success: #059669;
@@ -26,7 +26,7 @@
             --info-light: #e0f2fe;
             
             /* Professional muted role colors - using subtle indicators */
-            --role-server: #6366f1;
+            --role-server: #0051E6;
             --role-cook: #8b5cf6;
             --role-host: #06b6d4;
             --role-bartender: #f59e0b;
@@ -62,7 +62,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'DM Sans', 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             background: var(--bg-primary);
             color: var(--text-primary);
             min-height: 100vh;
