--- a/sell-your-home.html
+++ b/sell-your-home.html
@@ -7,11 +7,11 @@
     <meta name="description" content="List your Rhode Island home for sale by owner. $49 flat fee, no 6% agent commission. Save thousands selling your home yourself.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
         body {
-            font-family: 'Inter', system-ui, sans-serif;
+            font-family: 'DM Sans', system-ui, sans-serif;
             background: linear-gradient(135deg, #0f172a 0%, #1e1b4b 50%, #0f172a 100%);
             color: #e2e8f0;
             min-height: 100vh;
@@ -37,7 +37,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 700;
-            background: linear-gradient(135deg, #6366f1, #8b5cf6);
+            background: linear-gradient(135deg, #0051E6, #8b5cf6);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             text-decoration: none;
@@ -55,7 +55,7 @@
         }
         .nav-links a:hover { color: #e2e8f0; }
         .nav-cta {
-            background: linear-gradient(135deg, #6366f1, #4f46e5);
+            background: linear-gradient(135deg, #0051E6, #4f46e5);
             padding: 0.5rem 1rem;
             border-radius: 8px;
             color: white !important;
@@ -204,7 +204,7 @@
             color: #64748b;
             font-size: 0.85rem;
         }
-        .footer a { color: #6366f1; }
+        .footer a { color: #0051E6; }
     </style>
 </head>
 <body>
@@ -392,7 +392,7 @@
                         ${l.description ? `<p style="color:#94a3b8;font-size:0.85rem;margin-bottom:0.75rem">${l.description.substring(0, 100)}${l.description.length > 100 ? '...' : ''}</p>` : ''}
                         <div style="display:flex;justify-content:space-between;align-items:center;margin-top:0.5rem">
                             <span style="color:#64748b;font-size:0.75rem">${daysAgo} days ago</span>
-                            <button onclick="contactSeller(${idx})" style="background:#6366f1;padding:0.4rem 0.8rem;font-size:0.8rem">📧 Contact</button>
+                            <button onclick="contactSeller(${idx})" style="background:#0051E6;padding:0.4rem 0.8rem;font-size:0.8rem">📧 Contact</button>
                         </div>
                     </div>
                 </div>`;
