Enhanced hero typography: gradient text, glow effects, better animations

--- a/index.html
+++ b/index.html
@@ -854,41 +854,62 @@
         }
 
         .hero h1 {
-            font-size: 4rem;
+            font-size: 4.5rem;
             font-weight: 800;
-            line-height: 1.1;
+            line-height: 1.05;
             margin-bottom: 1.5rem;
-            letter-spacing: -2px;
+            letter-spacing: -3px;
             opacity: 0;
             animation: titleEntrance 1s cubic-bezier(0.16, 1, 0.3, 1) forwards;
             animation-delay: 0.5s;
+            text-shadow: 0 4px 30px rgba(0, 81, 230, 0.3);
         }
 
         @keyframes titleEntrance {
             0% {
                 opacity: 0;
-                transform: translateY(40px);
-                letter-spacing: 10px;
+                transform: translateY(40px) scale(0.95);
+                letter-spacing: 8px;
             }
             100% {
                 opacity: 1;
-                transform: translateY(0);
-                letter-spacing: -2px;
+                transform: translateY(0) scale(1);
+                letter-spacing: -3px;
             }
         }
 
         .hero h1 .gradient {
-            background: linear-gradient(135deg, var(--primary), var(--accent), var(--primary-light));
+            background: linear-gradient(135deg, #00E1E6 0%, #0051E6 40%, #4300E6 70%, #019BE6 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            background-size: 200% 200%;
-            animation: gradientShift 5s ease infinite;
+            background-size: 300% 300%;
+            animation: gradientShift 6s ease infinite;
+            filter: drop-shadow(0 2px 20px rgba(0, 225, 230, 0.4));
+            font-style: italic;
+        }
+
+        .hero h1 br + *:not(.gradient) {
+            background: linear-gradient(90deg, #ffffff 0%, #e0e7ff 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         @keyframes gradientShift {
-            0%, 100% { background-position: 0% 50%; }
+            0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .hero h1 .hero-main-text {
+            display: inline-block;
+            background: linear-gradient(180deg, #ffffff 0%, #c7d2fe 50%, #a5b4fc 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-shadow: none;
+            filter: drop-shadow(0 4px 25px rgba(255, 255, 255, 0.15));
         }
 
         .hero-subtitle {
@@ -3580,7 +3601,7 @@
             </div>
             <h1>
                 <span class="gradient">AI Solutions for</span><br>
-                Rhode Island Businesses
+                <span class="hero-main-text">Rhode Island Businesses</span>
             </h1>
             <p class="hero-subtitle">
                 <span class="typewriter" id="typewriter">
