Restore real estate pages to original dark indigo/cyan theme

--- a/ri-3d-scatter.html
+++ b/ri-3d-scatter.html
@@ -42,7 +42,7 @@
             min-width: 150px;
             cursor: pointer;
         }
-        select:hover { border-color: #0051E6; }
+        select:hover { border-color: #6366f1; }
         .checkbox-group {
             display: flex;
             gap: 1rem;
@@ -59,8 +59,8 @@
             border: 1px solid transparent;
             transition: all 0.2s;
         }
-        .checkbox-label:hover { border-color: #0051E6; }
-        .checkbox-label.active { background: rgba(99,102,241,0.3); border-color: #0051E6; }
+        .checkbox-label:hover { border-color: #6366f1; }
+        .checkbox-label.active { background: rgba(99,102,241,0.3); border-color: #6366f1; }
         .checkbox-label input { display: none; }
         .zoom-btn {
             background: rgba(99,102,241,0.2);
@@ -72,7 +72,7 @@
             font-size: 0.85rem;
             transition: all 0.2s;
         }
-        .zoom-btn:hover { background: rgba(99,102,241,0.4); border-color: #0051E6; }
+        .zoom-btn:hover { background: rgba(99,102,241,0.4); border-color: #6366f1; }
         .stats {
             margin-left: auto;
             display: flex;
@@ -80,7 +80,7 @@
             font-size: 0.85rem;
         }
         .stat { text-align: center; }
-        .stat-value { font-size: 1.25rem; font-weight: 600; color: #00E1E6; }
+        .stat-value { font-size: 1.25rem; font-weight: 600; color: #22d3ee; }
         .stat-label { color: #64748b; font-size: 0.7rem; text-transform: uppercase; }
         #chart { width: 100%; height: calc(100vh - 70px); }
         .title {
