Remove purple hues, fix text overflow, use pure blue gradients

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             --primary-deep: #0008E6;
             --accent: #00E1E6;
             --accent-sky: #019BE6;
-            --accent-violet: #4300E6;
+            --accent-deep: #0008E6;
             --accent-glow: rgba(0, 225, 230, 0.3);
             --bg-dark: #0a0a0f;
             --bg-card: rgba(20, 20, 30, 0.6);
@@ -891,10 +891,9 @@
             background: linear-gradient(
                 var(--gradient-angle),
                 #00E1E6 0%,
-                #0051E6 20%,
-                #4300E6 40%,
-                #0051E6 60%,
-                #019BE6 80%,
+                #019BE6 25%,
+                #0051E6 50%,
+                #0008E6 75%,
                 #00E1E6 100%
             );
             background-size: 300% 300%;
@@ -927,7 +926,7 @@
         .hero-subtitle-line {
             display: block;
             font-size: clamp(2.2rem, 7vw, 4rem);
-            background: linear-gradient(90deg, #ffffff 0%, #e0e7ff 30%, #c7d2fe 60%, #a5b4fc 100%);
+            background: linear-gradient(90deg, #ffffff 0%, #e8f4ff 30%, #bfdbfe 60%, #93c5fd 100%);
             background-size: 200% 100%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -936,6 +935,8 @@
             animation: fadeSlideIn 1s ease forwards, subtleShimmer 6s ease-in-out infinite;
             animation-delay: 0.5s, 0s;
             opacity: 0;
+            width: 100%;
+            overflow: visible;
         }
 
         @keyframes fadeSlideIn {
