Convert Ouroboros pages from purple to blue color scheme

--- a/ouroboros/colony-dashboard.html
+++ b/ouroboros/colony-dashboard.html
@@ -45,7 +45,7 @@
         }
         .stat-value.orange { color: #ff9f43; }
         .stat-value.blue { color: #54a0ff; }
-        .stat-value.purple { color: #a55eea; }
+        .stat-value.highlight-text { color: #0051E6; }
         .stat-label { color: rgba(255,255,255,0.5); font-size: 0.85rem; margin-top: 4px; }
         
         .section-title {
@@ -154,7 +154,7 @@
                 <div class="stat-label">Self-Modifications</div>
             </div>
             <div class="stat-card">
-                <div class="stat-value purple">22,550</div>
+                <div class="stat-value blue">22,550</div>
                 <div class="stat-label">Pheromone Signals</div>
             </div>
         </div>
