--- a/ouroboros/colony-mindmap.html
+++ b/ouroboros/colony-mindmap.html
@@ -52,7 +52,7 @@
         
         .card.alpha { border-left-color: #58a6ff; border-left-width: 4px; }
         .card.beta { border-left-color: #f0883e; border-left-width: 4px; }
-        .card.gamma { border-left-color: #a371f7; border-left-width: 4px; }
+        .card.gamma { border-left-color: #019BE6; border-left-width: 4px; }
         .card.federation { border-left-color: #3fb950; border-left-width: 4px; }
         .card.pheromones { border-left-color: #f85149; border-left-width: 4px; }
         .card.selfimprove { border-left-color: #C4A052; border-left-width: 4px; }
@@ -65,7 +65,7 @@
         }
         .card.alpha .card-title { color: #58a6ff; }
         .card.beta .card-title { color: #f0883e; }
-        .card.gamma .card-title { color: #a371f7; }
+        .card.gamma .card-title { color: #019BE6; }
         .card.federation .card-title { color: #3fb950; }
         .card.pheromones .card-title { color: #f85149; }
         .card.selfimprove .card-title { color: #C4A052; }
