--- a/ouroboros/colony-report-2026-02-13.html
+++ b/ouroboros/colony-report-2026-02-13.html
@@ -57,7 +57,7 @@
         }
         .stat-value.orange { color: #ff9f43; }
         .stat-value.blue { color: #54a0ff; }
-        .stat-value.purple { color: #a55eea; }
+        .stat-value.highlight-text { color: #0051E6; }
         .stat-label {
             color: rgba(255,255,255,0.6);
             font-size: 0.95rem;
@@ -181,7 +181,7 @@
                 <div class="stat-label">Self-Modifications Applied</div>
             </div>
             <div class="stat-card">
-                <div class="stat-value purple">10,906</div>
+                <div class="stat-value blue">10,906</div>
                 <div class="stat-label">Pheromone Signals</div>
             </div>
         </div>
