--- a/ouroboros/live-updates.html
+++ b/ouroboros/live-updates.html
@@ -18,7 +18,7 @@
             --accent-dim: rgba(0,212,170,0.2);
             --warning: #ff9f43;
             --info: #54a0ff;
-            --purple: #a55eea;
+            --highlight: #0051E6;
         }
         body {
             font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
@@ -224,7 +224,7 @@
             color: var(--text-muted);
         }
         .code-block .comment { color: #6b7280; }
-        .code-block .keyword { color: var(--purple); }
+        .code-block .keyword { color: var(--highlight); }
         .code-block .string { color: var(--accent); }
         .code-block .number { color: var(--warning); }
         
